@@ -278,7 +278,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 222
         TOPMARGIN, 7
-        BOTTOMMARGIN, 208
+        BOTTOMMARGIN, 182
         HORZGUIDE, 19
     END
 
@@ -787,7 +787,7 @@ BEGIN
     GROUPBOX        "Manage password history of current entries",IDC_STATIC,6,33,213,86
 END
 
-IDD_PS_MISC DIALOGEX 0, 0, 229, 213
+IDD_PS_MISC DIALOGEX 0, 0, 229, 215
 STYLE DS_SETFONT | WS_CHILD | WS_DISABLED | WS_CAPTION | WS_SYSMENU
 CAPTION "Misc."
 FONT 8, "MS Sans Serif", 0, 0, 0x0
@@ -800,17 +800,20 @@ BEGIN
     CONTROL         "HotKey1",IDC_HOTKEY_CTRL,"msctls_hotkey32",WS_BORDER | WS_TABSTOP,53,49,80,14
     LTEXT           "Double-click action",IDC_STATIC,7,69,76,10
     COMBOBOX        IDC_DOUBLE_CLICK_ACTION,88,68,123,49,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    GROUPBOX        "Default Username",IDC_STATIC,5,91,216,51
-    CONTROL         "Use",IDC_USEDEFUSER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,105,29,10,WS_EX_TOPMOST | 0x2L
-    LTEXT           "as default username",IDC_STATIC_USERNAME,124,105,89,8,WS_DISABLED
-    EDITTEXT        IDC_DEFUSERNAME,42,104,79,12,ES_AUTOHSCROLL | WS_DISABLED
+    GROUPBOX        "Default Username",IDC_STATIC,5,126,216,51
+    CONTROL         "Use",IDC_USEDEFUSER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,140,29,10,WS_EX_TOPMOST | 0x2L
+    LTEXT           "as default username",IDC_STATIC_USERNAME,124,140,89,8,WS_DISABLED
+    EDITTEXT        IDC_DEFUSERNAME,42,139,79,12,ES_AUTOHSCROLL | WS_DISABLED
     CONTROL         "Query user to set default username",IDC_QUERYSETDEF,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,124,176,10
-    GROUPBOX        "Alternate Browser ",IDC_STATIC,5,148,216,30
-    EDITTEXT        IDC_OTHERBROWSERLOCATION,11,161,166,12,ES_AUTOHSCROLL | WS_GROUP
-    PUSHBUTTON      "Browse",IDC_BROWSEFORLOCATION,182,160,31,14
-    EDITTEXT        IDC_DEFAULTAUTOTYPE,140,186,80,12,ES_AUTOHSCROLL
-    LTEXT           "Default Autotype String for this database:",IDC_STATIC,7,188,132,8
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,159,176,10
+    GROUPBOX        "Alternate Browser ",IDC_STATIC,5,180,216,30
+    EDITTEXT        IDC_OTHERBROWSERLOCATION,11,193,166,12,ES_AUTOHSCROLL | WS_GROUP
+    PUSHBUTTON      "Browse",IDC_BROWSEFORLOCATION,182,192,31,14
+    EDITTEXT        IDC_DEFAULTAUTOTYPE,142,108,75,12,ES_AUTOHSCROLL
+    LTEXT           "Default Autotype String for this database:",IDC_STATIC,9,110,132,8
+    CONTROL         "Minimize on Autotype ('Always on top' takes precedence)",IDC_MINIMIZEONAUTOTYPE,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,94,204,10
+    GROUPBOX        "Autotype",IDC_STATIC,5,82,216,43
 END
 
 IDD_PS_BACKUP DIALOGEX 0, 0, 229, 223
