@@ -69,6 +69,7 @@ const PWSprefs::boolPref PWSprefs::m_bool_prefs[NumBoolPrefs] = {
 	{_T("PreExpiryWarn"), false, false},                            // application
     {_T("ExplorerTypeTree"), false, false},                         // application
     {_T("ListViewGridLines"), false, false},                        // application
+    {_T("MinimizeOnAutotype"), true, false},                        // application
 };
 
 // Default value = -1 means set at runtime
